add blur and unblur functionality

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -176,4 +176,16 @@ script_includes:
     <!-- .post-tail-bottom -->
   </div>
   <!-- div.post-tail-wrapper -->
+  <script>
+    const blurredCodeBlocks = document.getElementsByClassName("blur");
+
+    for (let i = 0; i < blurredCodeBlocks.length; ++i) {
+      const blurredCodeBlock = blurredCodeBlocks[i]; 
+      const removeBlur = () => {
+        blurredCodeBlock.classList.remove("blur");
+        blurredCodeBlock.removeEventListener("click", removeBlur);
+      }
+      blurredCodeBlock.addEventListener("click", removeBlur);
+    }
+  </script>
 </article>
