--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,14 @@ script_includes:
 
 {% include toc-status.html %}
 
+{% if enable_toc %}
+  {% assign toc_hidden = false %}
+{% else %}
+  {% assign toc_hidden = true %}
+{% endif %}
+
+
+
 <article class="px-1" data-toc="{{ enable_toc }}">
   <header>
     <h1 data-toc-skip>{{ page.title }}</h1>
