--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -41,7 +41,7 @@ layout: page
         <span class="ms-2">
           <i class="far fa-folder{% if sub_categories_size > 0 %}-open{% endif %} fa-fw"></i>
 
-          {% capture _category_url %}/topics/{{ category_name | slugify | url_encode }}/{% endcapture %}
+          {% capture _category_url %}/series/{{ category_name | slugify | url_encode }}/{% endcapture %}
           <a href="{{ _category_url | relative_url }}" class="mx-2">{{ category_name }}</a>
 
           <!-- content count -->
